# birdthing

./: .gitignore  Makefile  README.md  birdthing.service  pyproject.toml
birdthing/: __init__.py  archive.py  camera.py  detect.py  label.py  manager.py  resize.py  server.py  servos.py  visualization.py
tests/: test_birdthing.py
